--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flgen
 description: CLI to scaffold Flutter architecture and features.
-version: 0.0.1
+version: 0.0.1+1
 homepage: https://github.com/joalmr/flgen-dart
 environment:
   sdk: '>=3.0.0 <4.0.0'
